fix responsive address out of summary box for large resolutions (lg, xl) 	fix top alineation with form 	fix select wallet button overlapping bug on medium screens

--- a/src/styles/_top.scss
+++ b/src/styles/_top.scss
@@ -1,3 +1,7 @@
+.v-toolbar__content, .v-toolbar__extension {
+  padding: 4px 0px;
+}
+
 .top {
   a {
     font-weight: normal;
